--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 </div>
 <button class="add-btn" id="add">+
 </button>
+<div class="overlay"></div>
+<div class="popup" id="pop">
+    <h2>Add Quote</h2>
+    <input type="text" placeholder="Quote Title"id="q-title">
+    <textarea name="" id="text" placeholder="Quotes of your thought!"></textarea>
+    <button class="add-q">Add</button>
+    <button class="cancel-q">Cancel</button>
+</div>
     <script src="quote.js"></script>
 </body>
 </html>
