--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Love</h2>
 
         <p>“The real lover is a man who can thrill you by kissing your forehead or smiling into your eyes or just staring into space.” </p>
-        <button onclick= "del(event)" class="delete-button" id="delbtn">delete</button>
+        <button onclick= "del(event)" class="delete-button" id="delbtn">Delete</button>
     </div>
     
 </div>
